# tinySecurity

./: settings.gradle
buildSo/: CMakeLists.txt  build.gradle
buildSo/src/main/: AndroidManifest.xml
buildSo/src/main/cpp/: AesEncryptor.cpp  CMakeLists.txt  aes.cpp  aesEncryptor.cpp  base64.c  md5.c  tinySecurity.cpp
buildSo/src/main/cpp/include/: aes.h  aesEncryptor.h  base64.h  extern-keys.h  logger.h  md5.h  register-native-method.h  register_jni_method.h
buildSo/src/main/java/com/atom/lib/tinysecurity/: TinySecurityCore.java
buildSo/src/main/java/com/atom/plugin/tinysecurity/: TinySecurityCore.java
buildSrc/: build.gradle
buildSrc/src/main/groovy/com/atom/lib/tinysecurity/extension/: KeyExt.groovy  TinySecurityExt.groovy
buildSrc/src/main/groovy/com/atom/lib/tinysecurity/generater/: CMakeListsBuilder.groovy  SecurityDataFileBuilder.groovy
buildSrc/src/main/groovy/com/atom/lib/tinysecurity/plugin/: tinySecurityPlugin.groovy
buildSrc/src/main/groovy/com/atom/lib/tinysecurity/task/: GenerateJavaClientFileTask.groovy  GenerateSecurityDataFileTask.groovy
buildSrc/src/main/groovy/com/atom/lib/tinysecurity/utils/: AESEncrypt.groovy  IOUtils.groovy  LogUtils.groovy  StringUtils.groovy
buildSrc/src/main/groovy/com/atom/plugin/tinysecurity/extension/: KeyExt.groovy  (+1 more)
demo/: build.gradle
demo/src/androidTest/java/com/atom/demo/: ExampleInstrumentedTest.java
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/atom/demo/: MainActivity.java
demo/src/test/java/com/atom/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
